add -v to stack build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -92,4 +92,4 @@ jobs:
 
       - name: Build
         shell: bash
-        run: stack build --test --no-run-tests --bench --no-run-benchmarks --ghc-options=-j ${{ matrix.stack_args }} ${{ matrix.flags }}
+        run: stack build --test --no-run-tests --bench --no-run-benchmarks --ghc-options=-j -v ${{ matrix.stack_args }} ${{ matrix.flags }}
