update stack resolvers

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - ghc: '9.10.2'
+          - ghc: '9.12.3'
+            os: ubuntu-latest
+            stack_yaml: 'stack-ghc-9.12.yaml'
+            stack_args: ''
+            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:optparse-applicative-018'
+            platform: linux-x86_64
+
+          - ghc: '9.10.3'
             os: ubuntu-latest
             stack_yaml: 'stack-ghc-9.10.yaml'
             stack_args: ''
@@ -25,7 +32,7 @@ jobs:
             platform: linux-x86_64
           # Use GHC 9.10 on windows to avoid the issue with foreign-library
           # https://github.com/haskell/cabal/issues/9982
-          - ghc: '9.10.2'
+          - ghc: '9.10.3'
             os: windows-latest
             stack_yaml: 'stack-ghc-9.10.yaml'
             stack_args: ''
