--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,12 +17,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - ghc: '9.12.3'
-            os: ubuntu-latest
-            stack_yaml: 'stack-ghc-9.12.yaml'
-            stack_args: ''
-            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:optparse-applicative-018'
-            platform: linux-x86_64
+          # - ghc: '9.12.3'
+          #   os: ubuntu-latest
+          #   stack_yaml: 'stack-ghc-9.12.yaml'
+          #   stack_args: ''
+          #   flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:optparse-applicative-018'
+          #   platform: linux-x86_64
 
           - ghc: '9.10.3'
             os: ubuntu-latest
